アソシエーション追加

--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -12,31 +12,62 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label :name, "物件名"  %>
     <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :price %>
+    <%= form.label :price, "賃料"  %>
     <%= form.number_field :price %>
   </div>
 
   <div class="field">
-    <%= form.label :addres %>
+    <%= form.label :addres, "住所"  %>
     <%= form.text_field :addres %>
   </div>
 
   <div class="field">
-    <%= form.label :age %>
+    <%= form.label :age, "築年数"  %>
     <%= form.number_field :age %>
   </div>
 
   <div class="field">
-    <%= form.label :etc %>
+    <%= form.label :etc, "備考"   %>
     <%= form.text_area :etc %>
   </div>
 
+
+  <%= form.fields_for :routes do |route| %>
+    <h2>最寄り駅<%= route.index + 1 %></h2>
+    <div class="field">
+      <div>
+        <%= route.label :line, "路線名"  %>
+      </div>
+      <div>
+        <%= route.text_field :line %>
+      </div>
+    </div>
+    
+    <div class="field">
+      <div>
+        <%= route.label :station, "駅名"  %>
+      </div>
+      <div>
+        <%= route.text_field :station %>
+      </div>
+    </div>
+
+    <div class="field">
+      <div>
+        <%= route.label :time, "徒歩分数"  %>
+      </div>
+      <div>
+       <%= route.text_field :time %>分
+      </div>
+    </div>
+  <% end %>
+
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "登録する" %>
   </div>
 <% end %>
